# asurt-telemetry-dashboard

./: .gitignore  .qmlls.ini  CMakeLists.txt  LICENSE  Main.qml  main.cpp
Controllers/: communicationmanager.cpp  communicationmanager.h  mqttclient.cpp  mqttclient.h  mqttparserworker.cpp  mqttparserworker.h  mqttreceiverworker.cpp  mqttreceiverworker.h  serialmanager.cpp  serialparserworker.cpp  serialreceiverworker.cpp  serialreceiverworker.h  udpclient.cpp  udpclient.h  udpparserworker.cpp  udpparserworker.h  udpreceiverworker.cpp  udpreceiverworker.h
Controllers/communication_manager/include/: communicationmanager.h
Controllers/communication_manager/src/: communicationmanager.cpp
Controllers/logging/include/: asynclogger.h
Controllers/logging/src/: asynclogger.cpp
Controllers/mqtt/include/: mqttclient.h  mqttparserworker.h  mqttreceiverworker.h
Controllers/mqtt/src/: mqttclient.cpp  mqttparserworker.cpp  mqttreceiverworker.cpp
Controllers/serial/include/: serialmanager.h  serialparserworker.h
Controllers/serial/src/: serialmanager.cpp  serialparserworker.cpp  serialreceiverworker.cpp
Controllers/udp/include/: udpclient.h  udpparserworker.h  udpreceiverworker.h
Controllers/udp/src/: udpclient.cpp  udpparserworker.cpp  udpreceiverworker.cpp
UI/InformationPage/: AcceleratorPedal.qml  BatteryLevelIndicator.qml  BrakePadel.qml  EulerGauges.qml  EulerVisual.qml  GpsPlotter.qml  Information.qml  RpmMeter.qml  Speedometer.qml  SteeringWheel.qml  TemperatureIndicator.qml  WheelSpeed.qml
UI/StatusBar/: StatusBar.qml
UI/WelcomePage/: MyButton.qml  WaitingScreen.qml  WelcomeScreen.qml
